prom-graf/prom-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
    name: http
  selector:
    app: prometheus-server
