prom-graf/graf-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
  - host: "test-graf.nnorman.tech"
    http:
      paths:
      - backend:
          serviceName: grafana-svc
          servicePort: 80
