prom-graf/prom-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: "test-prom.nnorman.tech"
    http:
      paths:
      - backend:
          serviceName: prometheus 
          servicePort: 80
